k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bankcore-api

  labels:
    app: bankcore-api

spec:

  replicas: 2

  selector:
    matchLabels:
      app: bankcore-api

  template:

    metadata:
      labels:
        app: bankcore-api

    spec:

      containers:

      - name: bankcore-api

        image: ${ACR_LOGIN_SERVER}/bankcore-api:${IMAGE_TAG}

        ports:
        - containerPort: 8000

        resources:

          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "1"
            memory: "1Gi"

        readinessProbe:
          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 20
          periodSeconds: 20
