k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bankcore-api

spec:

  selector:
    app: bankcore-api

  ports:

  - protocol: TCP
    port: 80
    targetPort: 8000

  type: ClusterIP
