k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: bankcore-api-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

  - host: bankcore.example.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: bankcore-api
            port:
              number: 80
